// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Screen /> > renders with default desktop position and size 1`] = `
<div
  class="sc-gueXAH foKoiI react-draggable"
  data-testid="screen-wrapper"
  style="position: absolute; user-select: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(520px,30px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <canvas
    class="sc-beqWNU gdHpLC"
    data-testid="screen-wrapper:render-canvas"
    height="160"
    width="240"
  />
  <div />
</div>
`;

exports[`<Screen /> > renders with default mobile position and size 1`] = `
<div
  class="sc-gueXAH foKoiI react-draggable"
  data-testid="screen-wrapper"
  style="position: absolute; user-select: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,0px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <canvas
    class="sc-beqWNU gdHpLC"
    data-testid="screen-wrapper:render-canvas"
    height="160"
    width="240"
  />
  <div />
</div>
`;
